--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,110 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+.button-green-color {
+  background-color: #00a69c;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.button-blue-color {
+  background-color: #092f57;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+.box-shadow-blue {
+  box-shadow: 8px 8px 0 #092f57;
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+.box-shadow-green {
+  box-shadow: 8px 8px 0 #00a69c;
+}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+.button-green-gradient {
+  background: linear-gradient(230deg, #00a69c, #26a9e0);
+}
+
+.text {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+  color: #00a69c;
+  border-bottom: 3px solid #26a9e0;
+}
+
+.fade-in {
+  opacity: 1;
+}
+
+.fade-out {
+  opacity: 0;
+}
+
+.dropdown-1 {
+  display: none;
+}
+
+.nav-item-1:hover .dropdown-1 {
+  display: block;
+}
+
+.arrow-icon {
+  transition: transform 0.3s ease;
+}
+
+.arrow-icon-2 {
+  transition: transform 0.3s ease;
+}
+
+.arrow-icon-3 {
+  transition: transform 0.3s ease;
+}
+
+.nav-item-1:hover .arrow-icon {
+  transform: translate(0%, 0%) rotate(180deg);
+}
+
+.dropdown-2 {
+  display: none;
+}
+
+.nav-item-2:hover .dropdown-2 {
+  display: block;
+}
+
+.nav-item-2:hover .arrow-icon-2 {
+  transform: translate(0%, 0%) rotate(180deg);
+}
+
+.dropdown-3 {
+  display: none;
+}
+
+.nav-item-3:hover .dropdown-3 {
+  display: block;
+}
+
+.nav-item-3:hover .arrow-icon-3 {
+  transform: translate(0%, 0%) rotate(180deg);
+}
+
+.hamburger-menu {
+  display: none;
+}
+
+@media screen and (max-width: 1070px) {
+  .contact-buttons {
+    display: none !important;
   }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+  .navbar {
+    display: none;
+  }
+  .hamburger-menu {
+    display: block;
+  }
+  .hamburger-dropdwon {
+    display: block;
+  }
+  .hero-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
